BUG: text wrap hourly temp solved

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -240,6 +240,10 @@ input:focus {
   outline: none;
 }
 
+.today__title--nowrap {
+  white-space: nowrap;
+}
+
 .today__title--big {
   font-size: 4rem;
   text-transform: capitalize;
